--- a/src/conf/mixed_function.yaml
+++ b/src/conf/mixed_function.yaml
@@ -3,8 +3,8 @@ inherit:
     - wandb.yaml
 
 model:
-    n_dims: 20
-    n_positions: 50
+    n_dims: 5 #20
+    n_positions: 11 #50
     n_embd: 128
     n_layer: 12
     n_head: 8
@@ -13,21 +13,20 @@ training:
     task: mixed_function
     data: gaussian
     task_kwargs:
-        function_types: ['linear', 'quadratic', 'neural_net', 'decision_tree']
-        # distribution: 'uniform'  # uniform distribution across function types
+        function_types: ['linear', 'quadratic'] #, 'neural_net', 'decision_tree']
     batch_size: 64
     learning_rate: 0.0001
     save_every_steps: 1000
     keep_every_steps: 100000
-    train_steps: 500000
+    train_steps: 5001 #500000
     curriculum:
         dims:
-            start: 20
+            start: 5 #20
             end: 20
             inc: 1
             interval: 2000
         points:
-            start: 50
+            start: 11 #50
             end: 50
             inc: 2
             interval: 2000
