--- a/src/conf/mixed_function.yaml
+++ b/src/conf/mixed_function.yaml
@@ -22,12 +22,12 @@ training:
     curriculum:
         dims:
             start: 5 #20
-            end: 20
+            end: 5 #20
             inc: 1
             interval: 2000
         points:
             start: 11 #50
-            end: 50
+            end: 11 #50
             inc: 2
             interval: 2000
 
